# gestor-rust

./: .env  Cargo.toml  Gestor_Loja_Acessorios.postman_collection.json
migrations/: 001_create_categories.sql  002_create_products.sql  003_create_product_categories.sql  004_create_prices.sql  005_create_stocks.sql  006_create_stock_movements.sql  007_create_warranties.sql  008_create_returns.sql  009_create_sales.sql
src/: db.rs  error.rs  lib.rs  main.rs  routes.rs
src/domain/: error.rs  mod.rs
src/domain/entity/: category.rs  mod.rs  price.rs  product.rs  report.rs  return_model.rs  sale.rs  stock.rs  warranty.rs
src/domain/port/: category_repository.rs  mocks.rs  mod.rs  price_repository.rs  product_repository.rs  report_repository.rs  return_repository.rs  sale_repository.rs  stock_repository.rs  unit_of_work.rs  warranty_repository.rs
src/domain/usecase/: category_usecase.rs  mod.rs  price_usecase.rs  product_usecase.rs  report_usecase.rs  return_usecase.rs  sale_usecase.rs  stock_usecase.rs  test_category_usecase.rs  test_price_usecase.rs  test_product_usecase.rs  test_report_usecase.rs  test_sale_usecase.rs  (+4 more)
src/handlers/: category.rs  mod.rs  price.rs  product.rs  report.rs  return_handler.rs  sale.rs  stock.rs  warranty.rs
src/infrastructure/: config.rs  db.rs  mod.rs  server.rs
src/models/: category.rs  mod.rs  price.rs  product.rs  report.rs  return_model.rs  sale.rs  stock.rs  warranty.rs
tests/: test_category.rs  test_price.rs  test_product.rs  test_returns.rs  test_sale_and_reports.rs  test_stock.rs  test_warranty.rs
tests/common/: mod.rs
(+24 files in other folders)
